--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -150,6 +150,13 @@
 			<version>2.13.2</version>
 		</dependency>
 
+		<!-- OpenStack -->
+		<dependency>
+			<groupId>com.github.openstack4j.core</groupId>
+			<artifactId>openstack4j</artifactId>
+			<version>3.10</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
