Added Keycloak client support in backend startvm script.

--- a/backend/capsules.cfg
+++ b/backend/capsules.cfg
@@ -73,3 +73,7 @@ ADMIN_SECURE_POLICY=<ADMIN_SECURE_POLICY_PATH>
 
 # Name of the secure volume is fixed for now;
 SECURE_VOL_NAME=secure_volume
+
+#Keycloak client
+KEYCLOAK_CLIENT=/htrc/data/dc-shared/keycloak-client/bin/keycloak-client
+KEYCLOAK_CONFIG_FILE=/htrc/data/dc-shared/development/app-dev.conf
