--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -11,10 +11,9 @@
 
 	<repositories>
 		<repository>
-			<id>maven2-repository.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2</url>
-			<layout>default</layout>
+			<id>nexus</id>
+			<name>HTRC Nexus Repository</name>
+			<url>https://nexus.htrc.illinois.edu/repository/maven-central/</url>
 			<releases>
 				<enabled>true</enabled>
 				<updatePolicy>daily</updatePolicy>
@@ -25,9 +24,17 @@
 			</snapshots>
 		</repository>
 		<repository>
-			<id>nexus</id>
+			<id>htrc.nexus.releases</id>
 			<name>HTRC Nexus Repository</name>
-			<url>http://nexus.htrc.illinois.edu/content/groups/public/</url>
+			<url>https://nexus.htrc.illinois.edu/repository/releases/</url>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>daily</updatePolicy>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
 		</repository>
 	</repositories>
 
@@ -193,13 +200,13 @@
 		<repository>
 			<id>htrc.nexus.releases</id>
 			<name>HTRC Release Repository</name>
-			<url>https://nexus.htrc.illinois.edu/content/repositories/releases/</url>
+			<url>https://nexus.htrc.illinois.edu/repository/releases/</url>
 		</repository>
 
 		<snapshotRepository>
 			<id>htrc.nexus.snapshots</id>
 			<name>HTRC Snapshot Repository</name>
-			<url>https://nexus.htrc.illinois.edu/content/repositories/snapshots/</url>
+			<url>https://nexus.htrc.illinois.edu/repository/snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
 
